# qnmfits

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py  index.rst
examples/: comparing_cce.ipynb  even_more_overtones.ipynb  process_cce_catalog.py  qnm_tuple.ipynb  working_with_cce.ipynb  working_with_generic_waveforms.ipynb  working_with_sxs.ipynb
qnmfits/: __init__.py  cce.py  qnm.py  qnmfits.py  qnmfits_combined.py  read_qnms.py  read_waveforms.py  scri_qnm_modes.py  utils.py
qnmfits/data/: cce-catalog.json
