[project]
name = "qnmfits"
dynamic = ["version", "description"]
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "Lorena Magaña Zertuche", email = "lmaganaz@go.olemiss.edu" },
  { name = "Eliot Finch", email = "efinch@caltech.edu" }
  ]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Astronomy"
  ]
dependencies = [
  "scri <= 2022.9.0",
  "qnm >= 0.4.3"
  ]

[project.urls]
Homepage = "https://github.com/sxs-collaboration/qnmfits"
Documentation = "https://qnmfits.readthedocs.io/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "qnmfits/__init__.py"